--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,13 @@ base58==2.0.1
 subprocess
 os
 pickle
+
+
+mkdir -p ~/.streamlit/
+echo "\
+[server]\n\
+headless = true\n\
+port = $PORT\n\
+enableCORS = false\n\
+\n\
+" > ~/.streamlit/config.toml
